--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -2,6 +2,9 @@ DATABASE_URL=
 CORS_ORIGIN="http://localhost:3001"
 BETTER_AUTH_URL="http://localhost:3000"
 BETTER_AUTH_SECRET=
+N8N_URL=
+N8N_API_KEY=
+N8N_PROJECT_TAG=
 APP=
 TURBO_API=
 TURBO_TOKEN=
