--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "serve dist -p 3001",
+    "start": "serve -s dist -p 3001",
     "check-types": "tsc --noEmit",
     "clean": "rm -rf dist"
   },
