--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "packageManager": "bun@1.3.9",
   "scripts": {
-    "dev": "bun run --watch src/index.ts",
+    "dev": "bun run --watch src/index.ts | bunx pino-pretty",
     "build": "bun build --compile src/index.ts --outfile server --minify",
     "start": "./server",
     "check-types": "tsc --noEmit",
@@ -14,6 +14,7 @@
     "@app/config": "workspace:*",
     "@types/bun": "^1.3.9",
     "typescript": "^5.9.3",
+    "pino-pretty": "^13.0.0",
     "tsdown": "^0.20.3"
   },
   "dependencies": {
@@ -21,6 +22,7 @@
     "@app/auth": "workspace:*",
     "elysia": "^1.4.25",
     "@elysiajs/cors": "^1.4.1",
-    "elysia-rate-limit": "^4.5.0"
+    "elysia-rate-limit": "^4.5.0",
+    "pino": "catalog:"
   }
 }
