--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "@orpc/openapi": "^1.13.5",
     "@orpc/zod": "^1.13.5",
     "zod": "^4.3.6",
-    "better-auth": "^1.4.18"
+    "better-auth": "^1.4.18",
+    "pino": "^9.6.0"
   },
   "devDependencies": {
     "@app/config": "workspace:*",
