feat(infra,auth,server): adiciona validação de variáveis de ambiente com Zod

--- a/packages/infra/package.json
+++ b/packages/infra/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^17.2.4",
     "drizzle-orm": "^0.45.1",
     "pino": "catalog:",
-    "postgres": "^3.4.8"
+    "postgres": "^3.4.8",
+    "zod": "catalog:"
   }
 }
