--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -1,17 +1,24 @@
+# Obrigatório
 DATABASE_URL=
-CORS_ORIGIN="http://localhost:3001"
-BETTER_AUTH_URL="http://localhost:3000"
+CORS_ORIGIN=http://localhost:3001
+BETTER_AUTH_URL=http://localhost:3000
 BETTER_AUTH_SECRET=
-N8N_URL=
-N8N_API_KEY=
-N8N_PROJECT_TAG=
+LOG_LEVEL=info
+
+# Apenas em produção no Railway
 APP=
 TURBO_API=
 TURBO_TOKEN=
 TURBO_TEAM=
-LOG_LEVEL=
+
+# Apenas se possuir integração com buckets do S3
 S3_ENDPOINT=
 S3_REGION=
 S3_ACCESS_KEY_ID=
 S3_SECRET_ACCESS_KEY=
 S3_BUCKET=
+
+# Apenas se possuir workflows no n8n ligados ao projeto
+N8N_URL=
+N8N_API_KEY=
+N8N_PROJECT_TAG=
