--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,4 +1,7 @@
-VITE_SERVER_URL="http://localhost:3000"
+# Obrigatório
+VITE_SERVER_URL=http://localhost:3000
+
+# Apenas em produção no Railway
 APP=
 TURBO_API=
 TURBO_TOKEN=
