chore: substitui infisical por script local para setup de env
Cria scripts/env.sh que copia .env.example, gera BETTER_AUTH_SECRET
automaticamente e remove variáveis opcionais

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "packages/*"
   ],
   "scripts": {
-    "env": "infisical export --env=dev --path=/web --output-file=./apps/web/.env && infisical export --env=dev --path=/server --output-file=./apps/server/.env",
+    "env": "bash scripts/env.sh",
     "dev": "turbo dev",
     "dev:server": "turbo -F server dev",
     "dev:web": "turbo -F web dev",
