chore: reorganiza e adiciona novos scripts no package.json

--- a/package.json
+++ b/package.json
@@ -8,27 +8,30 @@
     "packages/*"
   ],
   "scripts": {
-    "env": "sh scripts/env.sh",
-    "deploy": "sh scripts/deploy.sh",
-    "cleanup": "sh scripts/cleanup.sh",
     "dev": "turbo dev",
     "dev:server": "turbo -F server dev",
     "dev:web": "turbo -F web dev",
-    "db:push": "turbo -F @app/infra db:push",
-    "db:studio": "turbo -F @app/infra db:studio",
-    "db:generate": "turbo -F @app/infra db:generate",
-    "db:migrate": "turbo -F @app/infra db:migrate",
-    "check-types": "turbo check-types",
-    "lint": "bun ultracite check",
-    "lint:fix": "bun ultracite fix",
-    "lint:fix:unsafe": "bun ultracite fix --unsafe",
     "build": "turbo build",
     "build:server": "turbo -F server build",
     "build:web": "turbo -F web build",
     "start": "turbo start",
     "start:server": "turbo -F server start",
     "start:web": "turbo -F web start",
+    "db:push": "turbo -F @app/infra db:push",
+    "db:generate": "turbo -F @app/infra db:generate",
+    "db:migrate": "turbo -F @app/infra db:migrate",
+    "db:seed": "turbo -F @app/infra db:seed",
+    "db:studio": "turbo -F @app/infra db:studio",
+    "lint": "bun ultracite check",
+    "lint:fix": "bun ultracite fix",
+    "lint:fix:unsafe": "bun ultracite fix --unsafe",
+    "check-types": "turbo check-types",
     "ci": "bun lint && bun check-types && bun run build",
+    "env": "sh scripts/env.sh",
+    "cleanup": "sh scripts/cleanup.sh",
+    "railway:deploy": "sh scripts/railway-deploy.sh",
+    "railway:dev": "sh scripts/railway-dev.sh",
+    "railway:seed": "sh scripts/railway-seed.sh",
     "n8n:pull": "bun scripts/n8n-pull.ts",
     "n8n:push": "bun scripts/n8n-push.ts"
   },
