chore: adiciona .codepowers ao gitignore e normaliza comentários

--- a/.gitignore
+++ b/.gitignore
@@ -34,11 +34,12 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 # Finder (MacOS) folder config
 .DS_Store
 
-# Configurações do Projeto
+# project
 .tanstack
 .turbo
 .infisical.json
 .claude/settings.local.json
+.codepowers
 
-# Arquivo nul
+# file nul
 nul
