refactor(infra): consolida storage dentro de integrations

--- a/packages/infra/package.json
+++ b/packages/infra/package.json
@@ -7,11 +7,8 @@
     "./db": {
       "default": "./src/db/index.ts"
     },
-    "./integrations": {
-      "default": "./src/integrations/index.ts"
-    },
-    "./storage": {
-      "default": "./src/storage/client.ts"
+    "./integrations/*": {
+      "default": "./src/integrations/*.ts"
     },
     "./*": {
       "default": "./src/*.ts"
