--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "lint:fix:unsafe": "bun ultracite fix --unsafe",
     "check-types": "turbo check-types",
     "ci": "bun lint && bun check-types && bun run build",
+    "beta": "sh scripts/beta.sh",
     "env": "sh scripts/env.sh",
     "cleanup": "sh scripts/cleanup.sh",
-    "railway:deploy": "sh scripts/railway-deploy.sh",
     "railway:dev": "sh scripts/railway-dev.sh",
-    "railway:seed": "sh scripts/railway-seed.sh",
+    "seed": "sh scripts/seed.sh",
     "n8n:pull": "bun n8n/pull.ts",
     "n8n:push": "bun n8n/push.ts"
   },
