perf: habilita compilação incremental do TypeScript

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -23,7 +23,9 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "incremental": true,
+    "tsBuildInfoFile": "./node_modules/.cache/tsbuildinfo.json"
   },
   "include": ["src"]
 }
