--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -6,6 +6,7 @@
     "sourceMap": true,
     "outDir": "dist",
     "composite": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "tsBuildInfoFile": "./node_modules/.cache/tsbuildinfo.json"
   }
 }
