--- a/turbo.json
+++ b/turbo.json
@@ -17,7 +17,7 @@
     },
     "check-types": {
       "dependsOn": ["^build"],
-      "outputs": []
+      "outputs": ["node_modules/.cache/tsbuildinfo.json", "dist/tsconfig.tsbuildinfo"]
     },
     "db:pull": {
       "cache": false,
