--- a/turbo.json
+++ b/turbo.json
@@ -17,7 +17,10 @@
     },
     "check-types": {
       "dependsOn": ["^build"],
-      "outputs": ["node_modules/.cache/tsbuildinfo.json", "dist/tsconfig.tsbuildinfo"]
+      "outputs": [
+        "node_modules/.cache/tsbuildinfo.json",
+        "dist/tsconfig.tsbuildinfo"
+      ]
     },
     "db:pull": {
       "cache": false,
