--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -4,7 +4,7 @@ BETTER_AUTH_SECRET=
 BETTER_AUTH_URL=http://localhost:3000
 CORS_ORIGIN=http://localhost:3001
 
-# Apenas se possuir integração com buckets do S3
+# Opcional - Buckets S3
 S3_ENDPOINT=
 S3_REGION=
 S3_ACCESS_KEY_ID=
