--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -10,3 +10,7 @@ S3_REGION=
 S3_ACCESS_KEY_ID=
 S3_SECRET_ACCESS_KEY=
 S3_BUCKET=
+
+# Opcional - n8n Webhooks
+N8N_WEBHOOK_URL=
+N8N_WEBHOOK_TOKEN=
