refactor: reorganiza scripts de setup e ambiente

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -1,8 +1,8 @@
 # Obrigatório
 DATABASE_URL=
 BETTER_AUTH_SECRET=
-BETTER_AUTH_URL=http://localhost:3000
-CORS_ORIGIN=http://localhost:3001
+BETTER_AUTH_URL=
+CORS_ORIGIN=
 
 # Opcional - Buckets S3
 S3_ENDPOINT=
