--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "lint:fix:unsafe": "bun ultracite fix --unsafe",
     "check-types": "turbo check-types",
     "ci": "bun lint && bun check-types && bun run build",
-    "env": "sh scripts/env.sh",
-    "env:dev": "sh scripts/env-dev.sh",
+    "env:local": "sh scripts/env-local.sh",
+    "env:railway": "sh scripts/env-railway.sh",
     "cleanup": "sh scripts/cleanup.sh",
     "seed": "sh scripts/seed.sh",
     "n8n:pull": "bun n8n/pull.ts",
