--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 .infisical.json
 .claude/settings.local.json
 .codepowers
+apps/*server
 
 # file nul
 nul
