chore: organiza turbo.json de forma hierárquica

--- a/turbo.json
+++ b/turbo.json
@@ -3,18 +3,10 @@
   "ui": "stream",
   "globalPassThroughEnv": ["*"],
   "tasks": {
-    "dev": {
-      "cache": false,
-      "persistent": true
-    },
-    "build": {
-      "dependsOn": ["^build"],
-      "outputs": ["dist/**", "server"]
-    },
-    "test": {
-      "dependsOn": ["^build"],
-      "outputs": ["coverage/**"]
-    },
+    "dev": { "cache": false, "persistent": true },
+    "start": { "dependsOn": ["^build"], "cache": false, "persistent": true },
+
+    "build": { "dependsOn": ["^build"], "outputs": ["dist/**", "server"] },
     "check-types": {
       "dependsOn": ["^build"],
       "outputs": [
@@ -22,30 +14,11 @@
         "dist/tsconfig.tsbuildinfo"
       ]
     },
-    "db:pull": {
-      "cache": false,
-      "persistent": true
-    },
-    "db:push": {
-      "cache": false,
-      "persistent": true
-    },
-    "db:studio": {
-      "cache": false,
-      "persistent": true
-    },
-    "db:migrate": {
-      "cache": false,
-      "persistent": true
-    },
-    "db:generate": {
-      "cache": false,
-      "persistent": true
-    },
-    "start": {
-      "dependsOn": ["^build"],
-      "cache": false,
-      "persistent": true
-    }
+    "test": { "dependsOn": ["^build"], "outputs": ["coverage/**"] },
+
+    "db:generate": { "cache": false, "persistent": true },
+    "db:migrate": { "cache": false, "persistent": true },
+    "db:push": { "cache": false, "persistent": true },
+    "db:studio": { "cache": false, "persistent": true }
   }
 }
