--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "check-types": "turbo check-types",
     "ci": "bun lint && bun check-types && bun run build",
     "env:local": "sh scripts/env-local.sh",
+    "railway": "sh scripts/railway.sh",
     "env:railway": "sh scripts/env-railway.sh",
     "cleanup": "sh scripts/cleanup.sh",
     "n8n:pull": "bun n8n/pull.ts",
