--- a/turbo.json
+++ b/turbo.json
@@ -6,9 +6,12 @@
     "dev": { "cache": false, "persistent": true },
     "start": { "dependsOn": ["^build"], "cache": false, "persistent": true },
 
+    "topo": { "dependsOn": ["^topo"] },
+
     "build": { "dependsOn": ["^build"], "outputs": ["dist/**", "server"] },
     "check-types": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["topo"],
+      "inputs": ["**/*.{ts,tsx}", "tsconfig.json"],
       "outputs": [
         "node_modules/.cache/tsbuildinfo.json",
         "dist/tsconfig.tsbuildinfo"
