--- a/package.json
+++ b/package.json
@@ -28,9 +28,8 @@
     "lint:fix:unsafe": "bun ultracite fix --unsafe",
     "check-types": "turbo check-types",
     "ci": "bun lint && bun check-types && bun run build",
-    "env:local": "sh scripts/env-local.sh",
+    "env": "sh scripts/env.sh",
     "railway": "sh scripts/railway.sh",
-    "env:railway": "sh scripts/env-railway.sh",
     "cleanup": "sh scripts/cleanup.sh",
     "n8n:pull": "bun n8n/pull.ts",
     "n8n:push": "bun n8n/push.ts"
