feat(typescript): implementa project references para type checking mais rápido
- Adiciona `build: tsc --build` em todos os packages
- Adiciona conditional exports com `types` apontando pro dist/
- Adiciona `references` em packages e apps para explicit dependencies
- Turbo check-types agora depende de ^build (gera .d.ts antes de type check)
- Reduz check-types de 3m em cache miss para 13s (75% mais rápido)

--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -8,5 +8,10 @@
     "composite": true,
     "strictNullChecks": true,
     "tsBuildInfoFile": "./node_modules/.cache/tsbuildinfo.json"
-  }
+  },
+  "references": [
+    { "path": "../../packages/api" },
+    { "path": "../../packages/auth" },
+    { "path": "../../packages/infra" }
+  ]
 }
