--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -27,5 +27,9 @@
     "incremental": true,
     "tsBuildInfoFile": "./node_modules/.cache/tsbuildinfo.json"
   },
-  "include": ["src"]
+  "include": ["src"],
+  "references": [
+    { "path": "../../packages/api" },
+    { "path": "../../packages/auth" }
+  ]
 }
