--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -8,5 +8,8 @@
     "composite": true,
     "strictNullChecks": true,
     "tsBuildInfoFile": "./node_modules/.cache/tsbuildinfo.json"
-  }
+  },
+  "references": [
+    { "path": "../infra" }
+  ]
 }
