--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -5,13 +5,16 @@
   "packageManager": "bun@1.3.9",
   "exports": {
     ".": {
+      "types": "./dist/src/index.d.ts",
       "default": "./src/index.ts"
     },
     "./*": {
+      "types": "./dist/src/*.d.ts",
       "default": "./src/*.ts"
     }
   },
   "scripts": {
+    "build": "tsc --build",
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
