--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,10 +5,12 @@
   "packageManager": "bun@1.3.9",
   "exports": {
     "./*": {
+      "types": "./dist/src/*.d.ts",
       "default": "./src/*.ts"
     }
   },
   "scripts": {
+    "build": "tsc --build",
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
