--- a/packages/infra/package.json
+++ b/packages/infra/package.json
@@ -5,16 +5,20 @@
   "packageManager": "bun@1.3.9",
   "exports": {
     "./db": {
+      "types": "./dist/src/db/index.d.ts",
       "default": "./src/db/index.ts"
     },
     "./integrations/*": {
+      "types": "./dist/src/integrations/*.d.ts",
       "default": "./src/integrations/*.ts"
     },
     "./*": {
+      "types": "./dist/src/*.d.ts",
       "default": "./src/*.ts"
     }
   },
   "scripts": {
+    "build": "tsc --build",
     "db:push": "drizzle-kit push",
     "db:generate": "drizzle-kit generate --name=migration",
     "db:studio": "drizzle-kit studio",
