style(config): formata references em tsconfig.json

--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -9,7 +9,5 @@
     "strictNullChecks": true,
     "tsBuildInfoFile": "./node_modules/.cache/tsbuildinfo.json"
   },
-  "references": [
-    { "path": "../infra" }
-  ]
+  "references": [{ "path": "../infra" }]
 }
