feat(infra): adiciona configuração de CORS para storage
- Implementa storage-cors.ts para setup de CORS em deployment
- Adiciona script 'storage' aos workflow de pré-deploy
- Integra execução em Railway (main e pr environments)
- Adiciona lógica de cleanup quando S3 está desabilitado

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "db:migrate": "turbo -F @app/infra db:migrate",
     "db:seed": "sh scripts/seed.sh",
     "db:studio": "turbo -F @app/infra db:studio",
+    "storage": "turbo -F @app/infra storage",
     "lint": "bun ultracite check",
     "lint:fix": "bun ultracite fix",
     "lint:fix:unsafe": "bun ultracite fix --unsafe",
