refactor(caddy): centraliza headers de segurança e compressão
Move headers de segurança do Elysia para o Caddy, cobrindo também respostas do frontend. Adiciona compressão com zstd/gzip, headers universais (HSTS, X-Content-Type-Options, Referrer-Policy) e headers específicos da SPA (CSP, X-Frame-Options, Permissions-Policy). Remove lógica de headers do Elysia.

--- a/apps/caddy/Caddyfile
+++ b/apps/caddy/Caddyfile
@@ -7,11 +7,24 @@
 }
 
 :{$PORT} {
+    encode zstd gzip
+
+    header {
+        X-Content-Type-Options nosniff
+        Referrer-Policy strict-origin-when-cross-origin
+        Strict-Transport-Security "max-age=31536000; includeSubDomains"
+    }
+
     @backend path /auth /auth/* /rpc /rpc/*
     handle @backend {
         reverse_proxy http://{$SERVER_DOMAIN}:{$SERVER_PORT}
     }
     handle {
+        header {
+            X-Frame-Options DENY
+            Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob:; font-src 'self'; connect-src 'self'; frame-ancestors 'none'"
+            Permissions-Policy "geolocation=(), camera=(), microphone=()"
+        }
         reverse_proxy http://{$WEB_DOMAIN}:{$WEB_PORT}
     }
 }
