chore(config): limpa referências a n8n e storage nas configs e docs

--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "db:migrate": "turbo -F @app/infra db:migrate",
     "db:seed": "sh scripts/seed.sh",
     "db:studio": "turbo -F @app/infra db:studio",
-    "storage": "turbo -F @app/infra storage",
     "lint": "bun ultracite check",
     "lint:fix": "bun ultracite fix",
     "lint:fix:unsafe": "bun ultracite fix --unsafe",
@@ -31,9 +30,7 @@
     "ci": "bun lint && bun check-types && bun run build",
     "env": "sh scripts/env.sh",
     "railway": "sh scripts/railway.sh",
-    "cleanup": "sh scripts/cleanup.sh",
-    "n8n:pull": "bun n8n/pull.ts",
-    "n8n:push": "bun n8n/push.ts"
+    "cleanup": "sh scripts/cleanup.sh"
   },
   "catalog": {
     "typescript": "^5",
