--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "packages/*"
   ],
   "scripts": {
-    "setup": "sh scripts/setup.sh",
+    "setup": "bun scripts/setup.ts",
     "dev": "turbo dev",
     "dev:server": "turbo -F server dev",
     "dev:web": "turbo -F web dev",
@@ -21,16 +21,16 @@
     "db:push": "turbo -F @app/infra db:push",
     "db:generate": "turbo -F @app/infra db:generate",
     "db:migrate": "turbo -F @app/infra db:migrate",
-    "db:seed": "sh scripts/seed.sh",
+    "db:seed": "bun scripts/seed.ts",
     "db:studio": "turbo -F @app/infra db:studio",
     "lint": "bun ultracite check",
     "lint:fix": "bun ultracite fix",
     "lint:fix:unsafe": "bun ultracite fix --unsafe",
     "check-types": "turbo check-types",
     "ci": "bun lint && bun check-types && bun run build",
-    "env": "sh scripts/env.sh",
-    "railway": "sh scripts/railway.sh",
-    "cleanup": "sh scripts/cleanup.sh"
+    "env": "bun scripts/env.ts",
+    "railway": "bun scripts/railway.ts",
+    "cleanup": "bun scripts/cleanup.ts"
   },
   "catalog": {
     "typescript": "^5",
@@ -50,7 +50,9 @@
   "devDependencies": {
     "@app/config": "workspace:*",
     "@biomejs/biome": "2.3.14",
+    "@clack/prompts": "^1.0.1",
     "@types/bun": "^1.3.9",
+    "picocolors": "^1.1.1",
     "typescript": "^5.9.3",
     "ultracite": "7.1.5"
   },
