--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "beta",
   "type": "module",
   "private": true,
-  "packageManager": "bun@1.3.9",
+  "packageManager": "bun@1.3.10",
   "workspaces": [
     "apps/*",
     "packages/*"
@@ -34,7 +34,7 @@
   },
   "catalog": {
     "typescript": "^5",
-    "@types/bun": "1.3.9",
+    "@types/bun": "latest",
     "dotenv": "^17.2.4",
     "drizzle-orm": "^0.45.1",
     "drizzle-kit": "^0.31.9",
@@ -51,7 +51,7 @@
     "@app/config": "workspace:*",
     "@biomejs/biome": "2.3.14",
     "@clack/prompts": "^1.0.1",
-    "@types/bun": "^1.3.9",
+    "@types/bun": "latest",
     "picocolors": "^1.1.1",
     "typescript": "^5.9.3",
     "ultracite": "7.1.5"
